@@ -16,6 +16,8 @@ include::include.adoc[]
 
 - `@Issue` is now repeatable
 
+- `@Requires` is now repeatable
+
 
 == 2.0-M3 (2020-06-11)
 
